[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://background.png" type="Texture" id=7]
[ext_resource path="res://Seal.tscn" type="PackedScene" id=8]
[ext_resource path="res://dodge_assets/fart/BRAAP.wav" type="AudioStream" id=9]
[ext_resource path="res://dodge_assets/art/snow.png" type="Texture" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Seal = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_top = 479.0
margin_right = 1024.0
margin_bottom = 623.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 450, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Fart1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="hit" from="Player" to="." method="fish_score"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
